--- a/week_4/Week4_excercise.ipynb
+++ b/week_4/Week4_excercise.ipynb
@@ -10,7 +10,7 @@
         "Xhb-wZwWrp_x",
         "rLdfCgswV3M_"
       ],
-      "authorship_tag": "ABX9TyPVpw2mAp1qgxOjCggnP0Lk",
+      "authorship_tag": "ABX9TyPrrfI8c/nOC0SHOQJKPO+o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,8 +36,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Week 3 Excercise\n",
-        "Train a simple (single layer, single fully connected layer, etc.) neural network through JAX, Tensorflow, Pytorch, respectively. Compare the performance.\n"
+        "# Week 4 Excercise\n",
+        "Train a simple (single layer, single fully connected layer, etc.) neural network through JAX vectorization (maybe you can try vectorization techniques in PyTorch and Tensorflow respectively). Compare their performance with each and with the results derived in Week 3’s exercise."
       ],
       "metadata": {
         "id": "jjikpGZFjQWP"
@@ -74,9 +74,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3RDjE1y1j-Eg",
-        "outputId": "deb94410-cc5d-4366-c036-4e16ca9df400"
+        "outputId": "febce264-4e31-478a-ef8a-5aaee8811cba"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +129,7 @@
       "metadata": {
         "id": "_cR3666rRvi7"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "yNjmbMfgmSEz"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "xa3umb11lDCo"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -218,16 +218,17 @@
         "  label_probs = preds * y + (1 - preds) * (1 - y)\n",
         "  return -jnp.sum(jnp.log(label_probs))\n",
         "\n",
+        "def update_single(para_zip):\n",
+        "  (w, b), (dw, db) = para_zip\n",
+        "  return (w - learn_rate * dw, b - learn_rate * db)\n",
+        "\n",
         "def update(params_list, x, y):\n",
         "  grads = grad(loss)(params_list, x, y)\n",
         "  new_params_list = []\n",
-        "  for (w, b), (dw, db) in zip(params_list, grads):\n",
-        "    #print(w)\n",
-        "    #print(dw)\n",
-        "    new_params_list.append(\n",
-        "      (w - learn_rate * dw, b - learn_rate * db)\n",
-        "    )\n",
-        "    new_w = w - learn_rate * dw\n",
+        "\n",
+        "  # vectorize\n",
+        "  new_params_list = vmap(update_single)(zip(params_list, grads))\n",
+        "\n",
         "  return new_params_list"
       ],
       "metadata": {
