--- a/week_4/Week4_excercise.ipynb
+++ b/week_4/Week4_excercise.ipynb
@@ -10,7 +10,7 @@
         "Xhb-wZwWrp_x",
         "rLdfCgswV3M_"
       ],
-      "authorship_tag": "ABX9TyPrrfI8c/nOC0SHOQJKPO+o",
+      "authorship_tag": "ABX9TyOOihdwuc/8FZpGsrACkIhu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -205,17 +205,17 @@
         "    cur = relu(lin(params, cur))\n",
         "  # output\n",
         "  params = params_list[-1]\n",
-        "  #print(\"last_params w\", params[0])\n",
-        "  #print(\"last_lin\", lin(params, cur))\n",
         "\n",
         "  return sigmoid(lin(params, cur))\n",
         "\n",
         "def batch_predict(params_list, x):\n",
+        "  # vmap vectorize\n",
         "  return vmap(predict, in_axes=(None, 1))(params_list, x)\n",
         "\n",
         "def loss(params_list, x, y):\n",
         "  preds = predict(params_list, x)\n",
         "  label_probs = preds * y + (1 - preds) * (1 - y)\n",
+        "  # jnp.sum vectorize\n",
         "  return -jnp.sum(jnp.log(label_probs))\n",
         "\n",
         "def update_single(para_zip):\n",
@@ -225,16 +225,16 @@
         "def update(params_list, x, y):\n",
         "  grads = grad(loss)(params_list, x, y)\n",
         "  new_params_list = []\n",
-        "\n",
-        "  # vectorize\n",
-        "  new_params_list = vmap(update_single)(zip(params_list, grads))\n",
-        "\n",
+        "  for (w, b), (dw, db) in zip(params_list, grads):\n",
+        "    new_params_list.append(\n",
+        "      (w - learn_rate * dw, b - learn_rate * db)\n",
+        "    )\n",
         "  return new_params_list"
       ],
       "metadata": {
         "id": "BnNCshNN_UUw"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -280,7 +280,7 @@
       "metadata": {
         "id": "Y15_JD6HqN6k"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -299,9 +299,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j7w3AVTt4bIX",
-        "outputId": "f164f2e9-9d54-4db0-eb95-56f107dc2e1e"
+        "outputId": "57ee1749-ced7-49d4-d0d0-4ebef91d8264"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,36 +324,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aF_LsSP9-V4n",
-        "outputId": "85b416d5-50d3-4d6d-bb77-f01bd8ee3c2f"
+        "outputId": "499fe2c1-0e52-4fc0-ce45-932123aec147"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "epoch=0, loss=1175.9732666015625\n",
-            "epoch=1, loss=1164.939208984375\n",
-            "epoch=2, loss=1154.321044921875\n",
-            "epoch=3, loss=1143.893798828125\n",
-            "epoch=4, loss=1133.5177001953125\n",
-            "epoch=5, loss=1123.3236083984375\n",
-            "epoch=6, loss=1113.0899658203125\n",
-            "epoch=7, loss=1103.0635986328125\n",
-            "epoch=8, loss=1093.0263671875\n",
-            "epoch=9, loss=1083.066162109375\n",
-            "epoch=10, loss=1072.627685546875\n",
-            "epoch=11, loss=1062.2979736328125\n",
-            "epoch=12, loss=1051.8253173828125\n",
-            "epoch=13, loss=1041.75830078125\n",
-            "epoch=14, loss=1031.092529296875\n",
-            "epoch=15, loss=1021.2692260742188\n",
-            "epoch=16, loss=1010.9564208984375\n",
-            "epoch=17, loss=1003.3878784179688\n",
-            "epoch=18, loss=996.288330078125\n",
-            "epoch=19, loss=996.8013916015625\n",
-            "CPU times: user 1.31 s, sys: 71.5 ms, total: 1.38 s\n",
-            "Wall time: 1.6 s\n"
+            "epoch=0, loss=6534.31494140625\n",
+            "epoch=1, loss=9767.412109375\n",
+            "epoch=2, loss=3760.5927734375\n",
+            "epoch=3, loss=3072.244873046875\n",
+            "epoch=4, loss=2404.154296875\n",
+            "epoch=5, loss=8105.107421875\n",
+            "epoch=6, loss=2960.2490234375\n",
+            "epoch=7, loss=1782.263427734375\n",
+            "epoch=8, loss=2220.838623046875\n",
+            "epoch=9, loss=2514.513671875\n",
+            "epoch=10, loss=1711.5341796875\n",
+            "epoch=11, loss=1349.20068359375\n",
+            "epoch=12, loss=1298.455322265625\n",
+            "epoch=13, loss=1274.458251953125\n",
+            "epoch=14, loss=1255.9686279296875\n",
+            "epoch=15, loss=1239.9541015625\n",
+            "epoch=16, loss=1225.56005859375\n",
+            "epoch=17, loss=1212.0341796875\n",
+            "epoch=18, loss=1199.35546875\n",
+            "epoch=19, loss=1187.437255859375\n",
+            "CPU times: user 1.88 s, sys: 63.7 ms, total: 1.94 s\n",
+            "Wall time: 1.41 s\n"
           ]
         }
       ]
@@ -375,7 +375,7 @@
       "metadata": {
         "id": "OwDNK4m8V44P"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -388,9 +388,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tk4toXh1XQMQ",
-        "outputId": "8783ea41-3769-4bee-9c60-685d47225c05"
+        "outputId": "690b75ed-18ec-4a43-89cb-d412a4b3f386"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,7 +419,7 @@
       "metadata": {
         "id": "50_GGr24WLsD"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -433,67 +433,67 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BaSJHo6lY8OF",
-        "outputId": "6a1bb5fc-ac8d-4515-a077-3f8883c3165b"
+        "outputId": "49aa12d4-aa23-49db-ff0e-16cea4e67a10"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/20\n",
-            "40/40 [==============================] - 1s 2ms/step - loss: 5.0035\n",
+            "40/40 [==============================] - 1s 3ms/step - loss: 6.0976\n",
             "Epoch 2/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.7929\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.7273\n",
             "Epoch 3/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.2924\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
             "Epoch 4/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 4.3116\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
             "Epoch 5/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.9258\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
             "Epoch 6/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.9587\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
             "Epoch 7/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.8360\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
             "Epoch 8/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.8176\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
             "Epoch 9/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.8176\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
             "Epoch 10/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.8176\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
             "Epoch 11/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.8176\n",
+            "40/40 [==============================] - 0s 3ms/step - loss: 5.4820\n",
             "Epoch 12/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.8176\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
             "Epoch 13/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.8176\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
             "Epoch 14/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.8176\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
             "Epoch 15/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.8176\n",
+            "40/40 [==============================] - 0s 6ms/step - loss: 5.4820\n",
             "Epoch 16/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.8176\n",
+            "40/40 [==============================] - 0s 3ms/step - loss: 5.4820\n",
             "Epoch 17/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.8176\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
             "Epoch 18/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.8176\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
             "Epoch 19/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.8176\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
             "Epoch 20/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 3.8176\n",
-            "CPU times: user 2.32 s, sys: 137 ms, total: 2.45 s\n",
-            "Wall time: 2.11 s\n"
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "CPU times: user 3.25 s, sys: 165 ms, total: 3.42 s\n",
+            "Wall time: 3.29 s\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7fb0dbc370d0>"
+              "<keras.callbacks.History at 0x7f563e9f5650>"
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 20
         }
       ]
     },
@@ -503,7 +503,7 @@
       "metadata": {
         "id": "FZs7qwXtYm-o"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -524,7 +524,7 @@
       "metadata": {
         "id": "JMQ20_TTZTOO"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -536,7 +536,7 @@
       "metadata": {
         "id": "wEL6TJO-ZjgC"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -559,9 +559,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vy38LJ85ZWC6",
-        "outputId": "96e118b7-b661-4e5e-85ab-b9cca6b4406d"
+        "outputId": "af946d8d-4970-419f-ae1d-58c90aadd7ab"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,7 +595,7 @@
       "metadata": {
         "id": "5zXfGYXhayY9"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -614,16 +614,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8dYk9OElafcc",
-        "outputId": "1b35dd6c-204d-46a9-989b-dbbdda39552f"
+        "outputId": "e5d79d05-561b-4656-f0e2-3389c0f0ca62"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 1.06 s, sys: 10.3 ms, total: 1.07 s\n",
-            "Wall time: 1.09 s\n"
+            "CPU times: user 591 ms, sys: 29.9 ms, total: 621 ms\n",
+            "Wall time: 763 ms\n"
           ]
         }
       ]
@@ -634,7 +634,7 @@
       "metadata": {
         "id": "P6_pJwlcdNp4"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     }
   ]
