--- a/week_4/Week4_excercise.ipynb
+++ b/week_4/Week4_excercise.ipynb
@@ -10,7 +10,7 @@
         "Xhb-wZwWrp_x",
         "rLdfCgswV3M_"
       ],
-      "authorship_tag": "ABX9TyOOihdwuc/8FZpGsrACkIhu",
+      "authorship_tag": "ABX9TyOo89K9Rj+SAlDIINHau0N2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,22 +70,10 @@
         "learn_rate = 0.0001"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3RDjE1y1j-Eg",
-        "outputId": "febce264-4e31-478a-ef8a-5aaee8811cba"
+        "id": "3RDjE1y1j-Eg"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-          ]
-        }
-      ]
+      "execution_count": 26,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -98,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "q-qJz8fUjIZ1"
       },
@@ -129,7 +117,7 @@
       "metadata": {
         "id": "_cR3666rRvi7"
       },
-      "execution_count": 2,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -152,7 +140,7 @@
       "metadata": {
         "id": "yNjmbMfgmSEz"
       },
-      "execution_count": 5,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -183,7 +171,7 @@
       "metadata": {
         "id": "xa3umb11lDCo"
       },
-      "execution_count": 4,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -218,12 +206,10 @@
         "  # jnp.sum vectorize\n",
         "  return -jnp.sum(jnp.log(label_probs))\n",
         "\n",
-        "def update_single(para_zip):\n",
-        "  (w, b), (dw, db) = para_zip\n",
-        "  return (w - learn_rate * dw, b - learn_rate * db)\n",
+        "loss_jit = jit(grad(loss))\n",
         "\n",
         "def update(params_list, x, y):\n",
-        "  grads = grad(loss)(params_list, x, y)\n",
+        "  grads = loss_jit(params_list, x, y)\n",
         "  new_params_list = []\n",
         "  for (w, b), (dw, db) in zip(params_list, grads):\n",
         "    new_params_list.append(\n",
@@ -234,7 +220,7 @@
       "metadata": {
         "id": "BnNCshNN_UUw"
       },
-      "execution_count": 13,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -280,7 +266,7 @@
       "metadata": {
         "id": "Y15_JD6HqN6k"
       },
-      "execution_count": 14,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -299,9 +285,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j7w3AVTt4bIX",
-        "outputId": "57ee1749-ced7-49d4-d0d0-4ebef91d8264"
+        "outputId": "f1594727-04ae-4387-ed2f-803d8ac44457"
       },
-      "execution_count": 15,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,9 +310,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aF_LsSP9-V4n",
-        "outputId": "499fe2c1-0e52-4fc0-ce45-932123aec147"
+        "outputId": "a06c0e37-3798-4f8e-995f-d0b6c0bdb91f"
       },
-      "execution_count": 16,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,11 +338,23 @@
             "epoch=17, loss=1212.0341796875\n",
             "epoch=18, loss=1199.35546875\n",
             "epoch=19, loss=1187.437255859375\n",
-            "CPU times: user 1.88 s, sys: 63.7 ms, total: 1.94 s\n",
-            "Wall time: 1.41 s\n"
+            "CPU times: user 1.5 s, sys: 80.7 ms, total: 1.58 s\n",
+            "Wall time: 1.07 s\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "Comparing with Tensorflow and PyTorch\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "oLVIIRr5DEu_"
+      }
     },
     {
       "cell_type": "markdown",
@@ -375,7 +373,7 @@
       "metadata": {
         "id": "OwDNK4m8V44P"
       },
-      "execution_count": 17,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -388,9 +386,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tk4toXh1XQMQ",
-        "outputId": "690b75ed-18ec-4a43-89cb-d412a4b3f386"
+        "outputId": "522423a8-560d-4e27-d5ca-78c0f679df0a"
       },
-      "execution_count": 18,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,7 +417,7 @@
       "metadata": {
         "id": "50_GGr24WLsD"
       },
-      "execution_count": 19,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -433,67 +431,67 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BaSJHo6lY8OF",
-        "outputId": "49aa12d4-aa23-49db-ff0e-16cea4e67a10"
+        "outputId": "0d0a8c4e-d797-47d2-a163-6a2291a39118"
       },
-      "execution_count": 20,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/20\n",
-            "40/40 [==============================] - 1s 3ms/step - loss: 6.0976\n",
+            "40/40 [==============================] - 1s 2ms/step - loss: 4.2725\n",
             "Epoch 2/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.7273\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 3.5303\n",
             "Epoch 3/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 3ms/step - loss: 3.4446\n",
             "Epoch 4/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 3.2740\n",
             "Epoch 5/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 3.0056\n",
             "Epoch 6/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.3702\n",
             "Epoch 7/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 3ms/step - loss: 5.9527\n",
             "Epoch 8/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.9527\n",
             "Epoch 9/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.9527\n",
             "Epoch 10/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 3ms/step - loss: 5.9527\n",
             "Epoch 11/20\n",
-            "40/40 [==============================] - 0s 3ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.9527\n",
             "Epoch 12/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.9527\n",
             "Epoch 13/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.9527\n",
             "Epoch 14/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.9527\n",
             "Epoch 15/20\n",
-            "40/40 [==============================] - 0s 6ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.9527\n",
             "Epoch 16/20\n",
-            "40/40 [==============================] - 0s 3ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.9527\n",
             "Epoch 17/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 3ms/step - loss: 5.9527\n",
             "Epoch 18/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 3ms/step - loss: 5.9527\n",
             "Epoch 19/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.9527\n",
             "Epoch 20/20\n",
-            "40/40 [==============================] - 0s 2ms/step - loss: 5.4820\n",
-            "CPU times: user 3.25 s, sys: 165 ms, total: 3.42 s\n",
-            "Wall time: 3.29 s\n"
+            "40/40 [==============================] - 0s 2ms/step - loss: 5.9527\n",
+            "CPU times: user 3.1 s, sys: 117 ms, total: 3.21 s\n",
+            "Wall time: 2.62 s\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f563e9f5650>"
+              "<keras.callbacks.History at 0x7f55cfa2dbd0>"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 38
         }
       ]
     },
@@ -503,7 +501,7 @@
       "metadata": {
         "id": "FZs7qwXtYm-o"
       },
-      "execution_count": 20,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -524,7 +522,7 @@
       "metadata": {
         "id": "JMQ20_TTZTOO"
       },
-      "execution_count": 21,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -536,7 +534,7 @@
       "metadata": {
         "id": "wEL6TJO-ZjgC"
       },
-      "execution_count": 22,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -559,9 +557,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vy38LJ85ZWC6",
-        "outputId": "af946d8d-4970-419f-ae1d-58c90aadd7ab"
+        "outputId": "beee95eb-c1ff-49ee-92d4-f933f39292c9"
       },
-      "execution_count": 23,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,7 +593,7 @@
       "metadata": {
         "id": "5zXfGYXhayY9"
       },
-      "execution_count": 24,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -614,16 +612,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8dYk9OElafcc",
-        "outputId": "e5d79d05-561b-4656-f0e2-3389c0f0ca62"
+        "outputId": "98958548-58ea-4e3b-98d5-169f271e6714"
       },
-      "execution_count": 25,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 591 ms, sys: 29.9 ms, total: 621 ms\n",
-            "Wall time: 763 ms\n"
+            "CPU times: user 593 ms, sys: 20.9 ms, total: 614 ms\n",
+            "Wall time: 612 ms\n"
           ]
         }
       ]
@@ -634,7 +632,7 @@
       "metadata": {
         "id": "P6_pJwlcdNp4"
       },
-      "execution_count": 25,
+      "execution_count": 43,
       "outputs": []
     }
   ]
