--- a/week_6/Week 6 Exercise.ipynb
+++ b/week_6/Week 6 Exercise.ipynb
@@ -17,7 +17,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "ewKb0DoQUtZC"
       },
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "Kt_f159fOk7o"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "yfSBgnkbJv3j"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "3Fp7Rb3rKJZR"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -100,18 +100,24 @@
         "  '''\n",
         "  use asyncio\n",
         "  '''\n",
-        "  pass\n",
+        "  loop = asyncio.get_event_loop()\n",
+        "  tasks = [get_html(url) for url in urls]\n",
+        "  loop.run_until_complete(asyncio.gather(*tasks))\n",
         "\n",
         "def main_parse_html():\n",
         "  '''\n",
         "  use multiprocessing\n",
         "  '''\n",
-        "  pass"
+        "  p = Pool()\n",
+        "  for i, html in enumerate(htmls):\n",
+        "    p.apply_async(parse_html, args=(html, i))\n",
+        "  p.close()\n",
+        "  p.join() \n"
       ],
       "metadata": {
         "id": "CnJNOL5QM514"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -127,16 +133,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M_1sW-ibNSOt",
-        "outputId": "4fd62ee1-b36c-484b-afed-8346f6c2a975"
+        "outputId": "5a072f4e-3b0a-4d32-f9d8-7020a9e8aba2"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 35 µs, sys: 0 ns, total: 35 µs\n",
-            "Wall time: 41.2 µs\n"
+            "Title 0: A Literature Review on Length of Stay Prediction for Stroke Patients using Machine Learning and Statistical ApproachesTitle 1: Locally finite free space as limiting case of PT-symmetric medium\n",
+            "\n",
+            "Title 2: A Lightweight and Accurate Spatial-Temporal Transformer for Traffic ForecastingTitle 3: Time-Dependent Duhamel Renormalization method with Multiple Conservation and Dissipation Laws\n",
+            "\n",
+            "Title 4: Robust reliability-based topology optimization under random-field material modelTitle 5: Improving Deep Neural Network Classification Confidence using Heatmap-based eXplainable AI\n",
+            "\n",
+            "Title 6: Modeling Advection on Directed Graphs using Matérn Gaussian Processes for Traffic Flow\n",
+            "Title 7: Simulating local fields in carbon nanotube reinforced composites for infinite strip with voids\n",
+            "Title 9: Confidence-Aware Multi-Teacher Knowledge DistillationTitle 8: AttentionLight: Rethinking queue length and attention mechanism for traffic signal control\n",
+            "\n",
+            "CPU times: user 167 ms, sys: 50.5 ms, total: 218 ms\n",
+            "Wall time: 773 ms\n"
           ]
         }
       ]
@@ -158,8 +174,62 @@
       "metadata": {
         "id": "IdXJJ4FxQW4z"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def main_parse_html_mt():\n",
+        "  '''\n",
+        "  use multithreading\n",
+        "  '''\n",
+        "  p = threading.Pool()\n",
+        "  for i, html in enumerate(htmls):\n",
+        "    p.apply_async(parse_html, args=(html, i))\n",
+        "  p.close()\n",
+        "  p.join() "
+      ],
+      "metadata": {
+        "id": "ocgHyKuqIovz"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "main_parse_html()"
+      ],
+      "metadata": {
+        "id": "98gyDTVaI1BC",
+        "outputId": "070c3f9d-cecc-4eb3-890c-677b5023c88c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Title 1: Locally finite free space as limiting case of PT-symmetric mediumTitle 0: A Literature Review on Length of Stay Prediction for Stroke Patients using Machine Learning and Statistical Approaches\n",
+            "\n",
+            "Title 3: Time-Dependent Duhamel Renormalization method with Multiple Conservation and Dissipation LawsTitle 2: A Lightweight and Accurate Spatial-Temporal Transformer for Traffic Forecasting\n",
+            "Title 4: Robust reliability-based topology optimization under random-field material model\n",
+            "\n",
+            "Title 5: Improving Deep Neural Network Classification Confidence using Heatmap-based eXplainable AI\n",
+            "Title 6: Modeling Advection on Directed Graphs using Matérn Gaussian Processes for Traffic Flow\n",
+            "Title 7: Simulating local fields in carbon nanotube reinforced composites for infinite strip with voidsTitle 8: AttentionLight: Rethinking queue length and attention mechanism for traffic signal control\n",
+            "Title 9: Confidence-Aware Multi-Teacher Knowledge Distillation\n",
+            "\n",
+            "CPU times: user 74.8 ms, sys: 36.5 ms, total: 111 ms\n",
+            "Wall time: 391 ms\n"
+          ]
+        }
+      ]
     }
   ]
 }
